# zdhpctl

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
.run/: zdhpctl activelocale.run.xml  zdhpctl bred.run.xml  zdhpctl.run.xml
include/modules/hyprland/: IPC.hpp  extract.hpp  language.hpp
include/util/: json.hpp
src/modules/hyprland/: IPC.cpp  extract.cpp  language.cpp
